--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -27,6 +27,12 @@ body{
     background-color: rgba(253, 136, 152, 0.6);
   }
 }
+.home-link{
+  &:hover{
+    color: rgba(253, 136, 152, 1);
+    text-decoration: underline;
+  }
+}
 .around-card{
   background-color: rgba(253, 136, 152, 0.2);
   border-radius: 5px;
@@ -57,6 +63,7 @@ body{
 .reviewer-photo{
   width: 30px;
   height: 30px;
+  border-radius: 50%;
 }
 .reviewer-check {
   color: rgb(25,135,84);
